[[bin]]
name = "Mountain"
path = "Source/Library.rs"

[build-dependencies]
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
toml = "0.8.19"

tauri-build = { version = "2.0.0-rc.2", features = [] }

[dependencies]
async-trait = "0.1.81"
futures = "0.3.30"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
tokio = "1.39.2"
tokio-tungstenite = "0.23.1"

tauri = { version = "2.0.0-rc.2", features = [] }
portpicker = "0.1.1"

tauri-plugin-authenticator = "2.0.0-rc.0"
tauri-plugin-autostart = "2.0.0-rc.0"
tauri-plugin-cli = "2.0.0-rc.0"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-deep-link = "0.1.2"
tauri-plugin-devtools = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-global-shortcut = "2.0.0-rc.0"
tauri-plugin-http = "2.0.0-rc.0"
tauri-plugin-log = "2.0.0-rc.0"
tauri-plugin-notification = "2.0.0-rc.0"
tauri-plugin-os = "2.0.0-rc.0"
tauri-plugin-process = "2.0.0-rc.0"
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-single-instance = "2.0.0-rc.0"
tauri-plugin-sql = "2.0.0-rc.0"
tauri-plugin-store = "2.0.0-rc.0"
tauri-plugin-stronghold = "2.0.0-rc.0"
tauri-plugin-updater = "2.0.0-rc.0"
tauri-plugin-upload = "2.0.0-rc.0"
tauri-plugin-websocket = "2.0.0-rc.0"

# TODO:
# error: failed to select a version for `webkit2gtk-sys`.
# tauri-plugin-positioner = "1.0.5"

# TODO:
# error: failed to select a version for `webkit2gtk-sys`.
# tauri-plugin-persisted-scope = "0.1.3"

# TODO:
# error: failed to select a version for `gtk-sys`.
# tauri-plugin-localhost = "0.1.0"

# TODO:
# error: failed to select a version for `webkit2gtk-sys`.
# tauri-plugin-window-state = "0.1.1"

Echo = { version = "0.0.1", path = "../Echo" }

[lib]
name = "Mountain"
crate-type = ["lib", "cdylib", "staticlib"]
path = "Source/Library.rs"

[package]
name = "Mountain"
description = "⛰️ Mountain —"
version = "0.0.1"
edition = "2021"
autobenches = false
autobins = false
autoexamples = false
autotests = false
publish = false
default-run = "Mountain"
license = "MIT"
